# NAA-Spectrometry

./: .gitignore  compute_induced_activities.py  constants.py  environment.yml  main.py  pyproject.toml
data/: combined_output.csv  srm_1633c_gamma_yields.csv  srm_1663c_gamma_yields.csv
detector_simmulation/: CMakeLists.txt  __main__.py  main.cc
detector_simmulation/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
detector_simmulation/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
gamma_yields/: __main__.py
notebooks/: composition_analysis.py  detector_simulation_analysis.py  gamma_yields_analysis.py  gamma_yields_visualisation.py
